<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/episode_detail_root"
    tools:context=".seriesdetail.ui.EpisodeDetailFragment">

    <ImageView
        android:id="@+id/episode_detail_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
